--- a/styles/my-styles.css
+++ b/styles/my-styles.css
@@ -1,5 +1,5 @@
 h1 {
-    margin-top: 10px;
+    margin: 10px 0 0 0;
     border-radius: 7px 7px 0 0;
     border-bottom: solid 3px #970b12;
     -webkit-margin-before: 10px;
