--- a/styles/my-styles.css
+++ b/styles/my-styles.css
@@ -31,8 +31,9 @@ button{
 button:focus{
     outline: 0;
 }
-button:hover {
-    padding-left: 10px;
+
+button > img {
+    padding: 0 1em;
 }
 
 #quote-container {
@@ -81,7 +82,7 @@ button:hover {
         line-height: 1em;
     }
     #author{
-        font-size: 1.2em;
+        font-size: 1.8em;
     }
     .button >img {
         width: 32px;
