--- a/styles/my-styles.css
+++ b/styles/my-styles.css
@@ -22,7 +22,6 @@ html, body {
 button{
     display: inline-block;
     background-color: white;
-    /* background: url(../img/arrow-27-32.png); */
     height: 32px;
     width: 32px;
     border: 0;
@@ -32,7 +31,7 @@ button:focus{
     outline: 0;
 }
 
-button > img {
+.button > img {
     padding: 0 1em;
 }
 
