--- a/styles/my-styles.css
+++ b/styles/my-styles.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Parisienne');
 h1 {
     font-family: 'Crete Round', serif;
     margin: 10px 0 0 0;
@@ -31,7 +30,7 @@ button:focus{
     outline: 0;
 }
 
-.button > img {
+.button {
     padding: 0 1em;
 }
 
@@ -48,7 +47,7 @@ button:focus{
 }
 #author {
     color: rgb(90, 129, 16);
-    font-family: 'Parisienne', cursive;
+    font-family: 'Pinyon Script', cursive;
     font-size: 2em;
     text-align: center;
     padding-left: 5em;
@@ -82,8 +81,9 @@ button:focus{
     }
     #author{
         font-size: 1.8em;
+        padding-left: 2em;
     }
-    .button >img {
+    .button > img {
         width: 32px;
         height: 32px;
     }
